# TransferRust

./:  docker-compose.yml  LICENSE  README.md  dockerfile  roadmap.txt
apiTransfer/: Cargo.toml  README.md
apiTransfer/src/: bearer.rs  main.rs  network_apis.rs
apiTransfer/src/network_apis/: config.rs
